# UserStudyJournal

./: .gitignore  AUTHORS  HACKING  MAINTAINERS  MANIFEST.in  NEWS  README  gnome-activity-journal  setup.cfg  setup.py  ucl-study-journal
data/: Makefile.am  ucl-study-journal.xpm
data/zlogo/: zg.xcf
debian/: changelog  control  copyright  postinst  rules
extension/: gnome_activity_journal.py  ucl_study_journal.py
extra/: gnome-activity-journal.1  gnome-activity-journal.desktop.in  gnome-activity-journal.schemas.in  ucl-study-journal.1  ucl-study-journal.desktop.in  ucl-study-journal.schemas.in
po/: POTFILES.in  POTFILES.in.in  ast.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gnome-activity-journal.pot  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  ml.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sq.po  sr.po  sv.po  tr.po  ucl-study-journal.pot  (+4 more)
src/: Indicator.py  activity_widgets.py  activityviews.py  blacklist.py  bookmarker.py  common.py  config.py  content_objects.py  contextview.py  daybuttons.py  daywidgets.py  eventgatherer.py  external.py  gio_file.py  histogram.py  indicator.py  infopane.py  logwidget.py  main.py  model.py  quickconf.py  sources.py  store.py  supporting_widgets.py  teamgeist.py  test.py  thumb.py  thumbview.py  timeline.py  tracker-wrapper.py  tracker_wrapper.py  ui_utils.py  view.py  widgets.py
src/hamster_graphics/: graphics.py  timeline.py
src/histogramwidget/: __init__.py  gtkhistogram.py  histogramdata.py  histogramview.py
(+19 files in other folders)
