SUBDIRS = logo

# FIXME: the stock_calendar* files get accessed from the source, but
# from a relative directory in the source tree.  The GUI needs to be
# able to find those files in a standard, system-wide directory.

pkgdata_DATA =					\
	bookmark-new.svg			\
	calendar.svg				\
	filter.png				\
	filter.svg				\
	sandclock.svg				\
	stock_calendar-view-day.png		\
	stock_calendar-view-month.png	   	\
	stock_calendar-view-week.png		\
	tag.svg					\
	tag2.svg				\
	tag3.svg				\
	tag4.svg				\
	tag5.svg				\
	tag6.svg				\
	twitter.png
# FIXME: can we distribute twitter.png !?

EXTRA_DIST = $(pkgdata_DATA)
